<resources>
    <string name="app_name">MyReceipts</string>
    <string name="receipt_title_hint">Enter a title for the receipt.</string>
    <string name="receipt_title_label">Title</string>
    <string name="receipt_details_label">Details</string>
    <string name="receipt_shop_name">Enter a shop name.</string>
    <string name="receipt_comment">Enter a comment.</string>
    <string name="receipt_solved_label">Solved</string>
    <string name="date_picker_title">Date of receipt:</string>
    <string name="new_receipt">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d receipts</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="receipt_report_text">Send Receipt Report</string>
    <string name="receipt_report">%1$s!
        The receipt was obtained on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="receipt_report_subject">MyReceipts Receipt Report</string>
    <string name="send_report">Send receipt report via</string>
</resources>
